# workflow-test

./: README.md  project.toml  pyproject.toml  requirements.txt
.github/workflows/: python_test.yml
mypkg/: mycode.py
tests/: test_nb.py
tests/nbtests/: test_my_function.ipynb
